# page2skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  build.sh  pyproject.toml
defaults/: config.toml  taxonomy.toml
docs/: agent-guide.md
docs/superpowers/plans/: 2026-04-13-bookmark2skill-implementation.md
docs/superpowers/specs/: 2026-04-13-bookmark2skill-design.md
skills/: distill.md
src/bookmark2skill/: __init__.py  cli.py  config.py  fetcher.py  manifest.py  schema.py
src/bookmark2skill/parsers/: chrome_json.py  html_export.py
src/bookmark2skill/renderers/: obsidian.py  skill.py
src/bookmark2skill/templates/: obsidian.md.jinja  skill.md.jinja
tests/: conftest.py  test_chrome_json.py  test_cli.py  test_config.py  test_fetcher.py  test_html_export.py  test_manifest.py  test_obsidian_renderer.py  test_schema.py  test_skill_renderer.py
tests/fixtures/: sample_distilled.json
