[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark2skill"
version = "0.1.0"
description = "Convert Chrome bookmarks into Obsidian notes and Claude Code skills"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "readability-lxml>=0.8",
    "jinja2>=3.1",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[project.scripts]
bookmark2skill = "bookmark2skill.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bookmark2skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
