[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark2skill"
version = "0.1.1"
description = "Convert Chrome bookmarks into Obsidian notes and Claude Code skills"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["bookmarks", "chrome", "obsidian", "knowledge-base", "ai-agent", "skill", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "readability-lxml>=0.8",
    "jinja2>=3.1",
    "tomli>=2.0;python_version<'3.11'",
    "playwright>=1.40",
]

[project.urls]
Homepage = "https://github.com/host452b/bookmark2skill"
Repository = "https://github.com/host452b/bookmark2skill"
Issues = "https://github.com/host452b/bookmark2skill/issues"

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[project.scripts]
bookmark2skill = "bookmark2skill.cli:cli"
b2k = "bookmark2skill.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bookmark2skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
